added first shapes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
         <link rel="stylesheet" href="styles/Styles.css">
     </head>
     <body>
+        <section>
+            <section>
+            </section>
+            <section>
+            </section>
+        </section>
     </body>
 </html>
