--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             </section>
             <section>
             </section>
+            <section>
+            </section>
+            <section>
+            </section>
         </section>
     </body>
 </html>
