added moving mountain

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="styles/Styles.css">
     </head>
     <body>
-        <section>
-            <section>
-            </section>
-            <section>
-            </section>
-            <section>
-            </section>
-            <section>
-            </section>
-        </section>
+        <main>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <section></section>
+            <section></section>
+        </main>
     </body>
 </html>
