--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 <li></li>
                 <li></li>
             </ul>
-            <section></section>
+            <section>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
             <ul>
                 <li></li>
                 <li></li>
