--- a/index.html
+++ b/index.html
@@ -9,30 +9,35 @@
         <link rel="stylesheet" href="styles/Styles.css">
     </head>
     <body>
-        <main>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <section>
+        <main class="vuurwerkContainer">
+            <input type="checkbox" id="bomb">
+            <label for="nuke">
+                <div></div>
+              </label>  
                 <ul>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
                 </ul>
-            </section>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+                <section>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </section>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </input>
         </main>
     </body>
 </html>
