--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/Styles.css">
     </head>
     <body>
         <main class="vuurwerkContainer">
-            <input type="checkbox" id="bomb">
-            <label for="nuke">
-                <div></div>
-              </label>  
+            <h1>Style de raket</h1>
+            <input type="checkbox" id="bom">
+            <label for="bom">
+                <section></section>
+              </label> 
+              <h1>Activeer</h1>
+            <input type="radio" name="kleur" id="raket-k1">
+            <label for="raket-k1">
+                <section></section>
+              </label> 
+            <input type="radio" name="kleur" id="raket-k2">
+            <label for="raket-k2">
+                <section></section>
+              </label> 
+            <input type="radio" name="kleur" id="raket-k3">
+            <label for="raket-k3">
+                <section></section>
+              </label>
+              <input type="radio" name="kleur" id="raket-k4">
+              <label for="raket-k4">
+                  <section></section>
+                </label> 
+              <input type="radio" name="kleur" id="raket-k5">
+              <label for="raket-k5">
+                  <section></section>
+                </label> 
+              <input type="radio" name="kleur" id="raket-k6">
+              <label for="raket-k6">
+                  <section></section>
+                </label>                      
                 <ul>
                     <li></li>
                     <li></li>
@@ -38,6 +67,9 @@
                     <li></li>
                 </ul>
             </input>
+        </input>
+    </input>
+</input>
         </main>
     </body>
 </html>
